feat: update `nuxt-auto-crud` to `1.25.0`, enhance documentation, and refine application configuration and UI components.

--- a/content/1.docs/1.auto-crud/0.index.md
+++ b/content/1.docs/1.auto-crud/0.index.md
@@ -1,105 +1,50 @@
 ---
-title: Auto Crud
-description: Auto Crud is a lightweight CRUD engine that exposes RESTful CRUD endpoints for your data models with just the schemas defined.
+title: Installation
+description: A production-ready Nuxt 4 SaaS template for zero-codegen CRUD operations.
+summary: Comprehensive guide for initializing a Nuxt 4 project using the nuxt-auto-crud engine. Key concepts include Zero-Codegen architecture, Drizzle schema introspection, and automated RBAC hydration.
 ---
 
-## The Easiest Way to Integrate Auto Crud into Your Nuxt.js Application
+# Nuxt Auto CRUD Template
 
-### 1. Install the Template
+This template is a production-ready SaaS base built on the **nuxt-auto-crud** engine. It allows you to transform database schemas into a fully functional application with zero boilerplate.
 
+## Why use Nuxt Auto CRUD?
+
+The engine is built on **Single Source of Truth (SSOT)** and **Zero-Codegen** principles to streamline the transition from schema design to production.
+
+* **Zero-Codegen**: Eliminate heavy CRUD boilerplate. The engine introspects your Drizzle schemas directly, removing the need for code-generation steps during development.
+* **Instant API**: Automatically mounts RESTful endpoints at `/api/:resource` based on your Drizzle schema exports.
+* **Dashboard-Managed RBAC**: Configure roles and permissions for all CRUD operations via the built-in Admin Dashboard—no additional coding required.
+* **Automated Validation**: Frontend forms and backend payloads stay in sync automatically with your database constraints.
+
+---
+
+## 🚀 Quick Start
+
+### 1. Initialize & Start
 ```bash
 npx nuxi init -t gh:clifordpereira/nuxt-auto-crud_template <project-name>
+bun db:generate
+bun dev
 ```
 
-### 2. Or clone the template repository:
+### 2. Smart Seeding
+Seeding triggers automatically via `server/tasks/seed.ts` when the **Admin** (`NUXT_ADMIN_EMAIL`) logs in for the first time. This hydrates the system with initial roles and permissions.
 
-```bash
-git clone https://github.com/clifordpereira/nuxt-auto-crud_template.git
-```
+---
 
-Navigate to the project directory:
+## 🏗 Tech Stack
 
-```bash
-cd nuxt-auto-crud_template
-```
+| Feature | Provider |
+| :--- | :--- |
+| **Framework** | Nuxt 4 (`app/` directory) |
+| **Database/ORM** | Drizzle (SQLite/libSQL) |
+| **Auth** | `nuxt-auth-utils` |
+| **Permissions** | `nuxt-authorization` (RBAC) |
+| **UI Components** | Nuxt UI 4 / SaaS / Dashboard |
 
-Install dependencies:
+## 🔗 Resources
 
-::code-group
-
-```bash [pnpm]
-pnpm install
-```
-
-```bash [yarn]
-yarn install
-```
-
-```bash [npm]
-npm install
-```
-
-```bash [bun]
-bun install
-```
-
-::
-
-Nb: Remember to change the remote url by
-
-```bash
-git remote set-url origin <your-repo-url>
-git push -u origin main
-```
-
-## Migrate Schemas
-
-Define schemas in `server/db/schema.ts` and run:
-
-::code-group
-
-```bash [pnpm]
-pnpm run db:generate
-```
-
-```bash [yarn]
-yarn run db:generate
-```
-
-```bash [npm]
-npm run db:generate
-```
-
-```bash [bun]
-bun run db:generate
-```
-
-::
-
-### Start the application
-::code-group
-
-```bash [pnpm]
-pnpm run dev
-```
-
-```bash [yarn]
-yarn run dev
-```
-
-```bash [npm]
-npm run dev
-```
-
-```bash [bun]
-bun run dev
-```
-
-::
-The application will start at http://localhost:3000.
-
-
-Your [RESTful CRUD endpoints](/docs/what-you-get) will then be ready.
-
-
-But, if you prefer to add Auto Crud to an existing application, follow next sections:
+- [YouTube Walkthrough](https://www.youtube.com/watch?v=_o0cddJUU50&list=PLnbvxcojhIixqM1J08Tnm7vmMdx2wsy4B)
+- [Template Repository](https://github.com/clifordpereira/nuxt-auto-crud_template)
+- [Core Module Repository](https://github.com/clifordpereira/nuxt-auto-crud)
