--- a/content/1.docs/3.configuration/2.authentication.md
+++ b/content/1.docs/3.configuration/2.authentication.md
@@ -1,81 +1,56 @@
 ---
-title: Authentication
-description: Configure authentication for Nuxt Auto CRUD.
+title: Authentication & Security
+description: Strategic configuration for Session/JWT auth and template-level social identity.
 ---
 
-The module enables authentication by default. To test APIs without authentication, you can set `auth: false`.
+> The `nuxt-auto-crud stack` provides a dual-layer security model. The [Core Engine] handles low-level session/JWT verification and **RBAC** enforcement, while the [Template Implementation] manages OAuth2 flows and password lifecycle management.
 
-## Session Auth (Default)
+## 🛡️ Identity Strategies [Core Engine]
+The engine supports two primary authentication modes defined in `nuxt.config.ts`.
 
-Requires `nuxt-auth-utils` and `nuxt-authorization`.
+| Mode | Use Case | Requirements |
+| :--- | :--- | :--- |
+| **Session** | Fullstack Nuxt applications. | `nuxt-auth-utils`, `nuxt-authorization`. |
+| **JWT** | Headless / API-only deployments. | `NUXT_JWT_SECRET` env variable. |
 
+### Session Configuration
 ```typescript
-export default defineNuxtConfig({
-  autoCrud: {
-    auth: {
-      type: 'session',
-      authentication: true, // Enables requireUserSession() check
-      authorization: true // Enables authorize(model, action) check
-    }
+autoCrud: {
+  auth: {
+    type: 'session',
+    authentication: true, // Middleware user session check
+    authorization: true    // Granular RBAC checks via nuxt-authorization
   }
-})
+}
 ```
 
-## JWT Auth
+## 🔑 Social Identity [Template Implementation]
+The reference template utilizes `nuxt-auth-utils` for seamless OAuth2 integration.
 
-Useful for backend-only apps.
+### OAuth2 Provider Mapping
+Configure identity providers in `runtimeConfig.oauth`:
+- **GitHub**: `NUXT_OAUTH_GITHUB_CLIENT_ID` / `_SECRET`
+- **Google**: `NUXT_OAUTH_GOOGLE_CLIENT_ID` / `_SECRET`
 
-```typescript
-export default defineNuxtConfig({
-  autoCrud: {
-    auth: {
-      type: 'jwt',
-      authentication: true,
-      jwtSecret: process.env.JWT_SECRET,
-      authorization: true
-    }
-  }
-})
+## 📧 Password Lifecycle [Template Implementation]
+Security flows for password recovery are pre-integrated using **Resend**.
+
+| Feature | Local Dev | Production |
+| :--- | :--- | :--- |
+| **Capture** | Logs to Server Console | Sends via Resend API |
+| **Storage** | SQLite `users` table | SQLite `users` table |
+| **Token** | Signed JWE/UUID | Signed JWE/UUID |
+
+### Email Configuration
+Ensure environment variables are set for email delivery:
+```bash
+NUXT_EMAIL_FROM=noreply@example.com
+NUXT_RESEND_API_KEY=re_123456789
 ```
 
-## Social Login
-
-The template integrates with `nuxt-auth-utils` to provide social login capabilities.
-
-### Configuration
-
-Add your OAuth credentials to `runtimeConfig` in `nuxt.config.ts`:
-
-```typescript
-export default defineNuxtConfig({
-  runtimeConfig: {
-    oauth: {
-      github: {
-        clientId: process.env.NUXT_OAUTH_GITHUB_CLIENT_ID,
-        clientSecret: process.env.NUXT_OAUTH_GITHUB_CLIENT_SECRET
-      },
-      google: {
-        clientId: process.env.NUXT_OAUTH_GOOGLE_CLIENT_ID,
-        clientSecret: process.env.NUXT_OAUTH_GOOGLE_CLIENT_SECRET
-      }
-    }
-  }
-})
-```
-
-Supported providers include GitHub and Google. Ensure you have the corresponding environment variables set.
-
-## Password Reset
-
-The template includes a complete password reset flow using either Resend (production) or Nodemailer (local SMTP).
-
-### Configuration
-
-1. **Production (Resend)**: Set `NUXT_RESEND_API_KEY` in your environment.
-2. **Local**: In development, if no `NUXT_RESEND_API_KEY` is present, the reset link will be logged to the server console.
-
-### Flow
-1. User requests a reset link via `/auth/forgot-password`.
-2. A unique token is generated and emailed to the user (or logged).
-3. User clicks the link, which brings them to `/auth/reset-password?token=...`.
-4. User sets a new password.
+## 🚦 Authorization Flow
+All API requests follow a strict sequential check:
+1.  **Authentication**: Is the user valid?
+2.  **Resource Check**: Does the model exist?
+3.  **RBAC Check**: Does the user's role have the `action` (create/read/etc) permission for this resource?
+4.  **Ownership Check**: If `action_own` is assigned, does the `createdBy` ID match the current user?
