--- a/content/1.docs/3.configuration/3.resource-configuration.md
+++ b/content/1.docs/3.configuration/3.resource-configuration.md
@@ -1,74 +1,53 @@
 ---
-title: Resource Configuration (RBAC)
-description: Define fine-grained access control and resource policies.
+title: Resource Policy & Visibility
+description: Defining serialization boundaries and API visibility for resources.
 ---
 
-## Overview
+> Resource configuration in the `nuxt-auto-crud stack` manages the serialization boundary between your Drizzle schema and the JSON API. While the [Core Engine] enforces data protection via `getZodSchema`, the [Template Implementation] configures visibility tiers for Guests and Authenticated users.
 
-You can define fine-grained access control and resource policies in your `nuxt.config.ts` under the `autoCrud` key.
+## 👁️ Visibility Tiers
+The system categorizes field visibility into three distinct logical tiers.
 
-## Example Configuration
+| Tier | Logic Source | Target Audience |
+| :--- | :--- | :--- |
+| **System Hidden** | [Core Engine] (`HIDDEN_FIELDS`) | Never exposed (e.g., `password`, `token`). |
+| **Guest View** | `nuxt.config.ts` (`resources`) | Public, unauthenticated users. |
+| **Global UI Hide** | `app.config.ts` (`globalHide`) | Authenticated UI (e.g., `id`, `updatedAt`). |
 
-```typescript
-// nuxt.config.ts
-export default defineNuxtConfig({
-  autoCrud: {
-    resources: {
-      // Guest View: Only these columns are visible to unauthenticated users.
-      // Access control (who can list/read) is managed by your DB permissions.
-      users: ['id', 'name', 'avatar'], 
-    },
-  },
-})
-```
-
-## Advanced Field Visibility
-
-Currently, `nuxt-auto-crud` simplifies visibility into two tiers:
-1.  **Guest (Unauthenticated)**: Restricted by `publicColumns` in `nuxt.config.ts`.
-2.  **Authenticated (All Roles)**: Sees all fields (except globally hidden ones).
-
-### API Resource Control (app.config.ts)
-
-For more granular control similar to **Laravel API Resources**, use the `crud` configuration in `app/app.config.ts`. This allows you to hide specific columns from different contexts:
+## 🛠 Serialization Filtering [Core Engine]
+Configure public field whitelists in `nuxt.config.ts` to prevent data leakage to guests.
 
 ```typescript
-// app.config.ts
-export default defineAppConfig({
-  crud: {
-    // Roles to seed (excluding system roles: admin, manager, user, public)
-    rolesToSeed: ['moderator', 'customer'],
-
-    // Columns to always hide from the UI table (Authenticated & Guest)
-    globalHide: ['updatedAt', 'deletedAt', 'createdBy', 'updatedBy', 'resetToken'],
-    
-    // Export specific settings
-    exports: {
-      pdf: {
-        // Excluded from ALL resources in PDF
-        globalExclude: ['avatar', 'resetToken', 'resetExpires'],
-        // Resource specific overrides
-        resourceExclude: {
-          users: ['password', 'googleId', 'githubId'],
-        },
-      },
-      excel: {
-        globalExclude: [],
-        resourceExclude: {
-          users: ['password'],
-        },
-      },
-    },
-  },
-})
+// nuxt.config.ts [Core Engine]
+autoCrud: {
+  resources: {
+    // Whitelist: Only these columns are serialized for Guests
+    users: ['id', 'name', 'avatar'], 
+    blog_posts: ['id', 'title', 'content', 'createdAt']
+  }
+}
 ```
 
-**Note:** In enterprise applications requiring role-specific field visibility (e.g., "Managers" see salary, "Employees" do not), the standard approach is **Field-Level Security (FLS)** stored in the database. As `nuxt-auto-crud` focuses on MVP speed and simplicity, role-specific field filtering is currently handled via these configuration blocks.
+## 🎨 UI Display Policies [Template Implementation]
+Use `app.config.ts` to manage how data is presented in the reference admin interface.
 
-## Security Note
+### Global Exclusion List
+The `globalHide` array prevents specific system columns from cluttering the data tables.
+```typescript
+// app.config.ts [Template Implementation]
+crud: {
+  globalHide: ['updatedAt', 'deletedAt', 'createdBy', 'updatedBy', 'resetToken'],
+}
+```
 
-Even in full-stack applications where you control the UI, relying on the frontend to "not display" sensitive data is a security vulnerability. The data is still visible in the browser's Network tab. 
+### Export Configuration
+Refine data extraction boundaries for PDF and Excel generation.
+| Type | Config Path | Scope |
+| :--- | :--- | :--- |
+| **PDF** | `crud.exports.pdf` | High-fidelity document generation. |
+| **Excel** | `crud.exports.excel` | Raw data analysis/spreadsheet. |
 
-*   **Auto-Hiding:** Sensitive fields like `password`, `secret`, and `token` are automatically hidden from **ALL** responses by the `nuxt-auto-crud` module.
-*   **Custom Hiding:** Use `globalHide` in `app.config.ts` to hide additional fields (like `updatedAt` or `email`) that the module doesn't hide by default.
-*   **Context Hiding:** Use the `resources` config in `nuxt.config.ts` to filter fields specifically from public guest responses.
+## 🔒 Security Posture
+1.  **Immutability**: Fields in `PROTECTED_FIELDS` (e.g., `id`, `createdAt`) are stripped from `POST/PATCH` payloads by the engine.
+2.  **Hard Filtering**: Sensitive identifiers (`password`, `secret`) are excluded from the `SELECT` result set via `filterHiddenFields` before the response is dispatched.
+3.  **Context Sensitivity**: Guest-specific whitelists are applied **after** global hidden filters for defense-in-depth.
