--- a/content/1.docs/3.configuration/4.protected-hidden-fields.md
+++ b/content/1.docs/3.configuration/4.protected-hidden-fields.md
@@ -1,26 +1,28 @@
 ---
-title: Protected & Hidden Fields
-description: Learn about default protected and hidden fields and how to customize them.
+title: Field Privacy & Protection
+description: Technical specification for protected (read-only) and hidden (server-side only) fields within the nuxt-auto-crud engine.
+summary: This guide defines the security boundaries for database fields. Agents and clients are restricted from writing to protected fields and reading from hidden fields, ensuring data integrity and security.
 ---
 
-## Protected Fields
+# Field Privacy & Protection
 
-By default, the following fields are protected from updates:
+The `nuxt-auto-crud` engine enforces strict security boundaries by automatically filtering fields during CRUD operations.
 
-- `id`
-- `createdAt`
-- `created_at`
-- `updatedAt`
-- `updated_at`
+## 🛡️ Protected Fields (Write-Only)
+Protected fields are system-managed and cannot be updated via the generic CRUD endpoints. The engine automatically strips these from incoming payloads.
 
-You can customize updatable fields in your schema by modifying the `modelMapper.ts` utility.
+**Default Protected Fields:**
+- **Primary Keys:** `id`
+- **Timestamps:** `createdAt`, `updatedAt`, `deletedAt`, `created_at`, `updated_at`, `deleted_at`
+- **Audit Trails:** `createdBy`, `updatedBy`, `deletedBy`, `created_by`, `updated_by`, `deleted_by`
 
-## Hidden Fields
+## 🔒 Hidden Fields (Read-Prevention)
+Hidden fields are stripped from all API responses (both `GET` list and `GET` single) to prevent sensitive data leakage.
 
-By default, the following fields are hidden from API responses for security:
+**Default Hidden Fields:**
+- **Authentication:** `password`, `resetToken`, `githubId`, `googleId` (and snake_case variants)
+- **Security:** `secret`, `token`
+- **System Leakage:** `deletedAt`, `createdBy`, `updatedBy`, etc.
 
-- `password`
-- `secret`
-- `token`
-
-You can customize hidden fields by modifying the `modelMapper.ts` utility.
+## 🛠 Customization
+Custom field sets can be defined per-model within the `modelMapper.ts` utility using `customUpdatableFields` and `customHiddenFields`.
