--- a/content/1.docs/4.usage/2.permissions.md
+++ b/content/1.docs/4.usage/2.permissions.md
@@ -1,81 +1,57 @@
 ---
-title: Managing Permissions
-description: Learn how to manage permissions using the Role-Based Access Control (RBAC) system.
+title: RBAC & Permissions
+description: Technical architecture of the database-driven Role-Based Access Control system.
 ---
 
-To manage permissions in your application, you don't need to touch the code structure. Instead, you simply add or modify records in specific database tables. The system uses a **Role-Based Access Control (RBAC)** model.
+> The `nuxt-auto-crud` implements a dynamic **RBAC** (Role-Based Access Control) system stored within SQLite. The [Core Engine] evaluates these permissions at the API layer, while the [Template Implementation] provides the UI widgets and hooks to enforce visibility rules.
 
-<iframe width="100%" height="400" src="https://www.youtube.com/embed/W0ju4grRC9M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen class="rounded-xl"></iframe>
+## 📐 RBAC Schema [Core Engine]
+The permission system is comprised of five relational tables in SQLite.
 
-## Core Concepts
+| Table Name | Logic Role | Description |
+| :--- | :--- | :--- |
+| `roles` | Subject | Root identity groups (e.g., `admin`, `manager`). |
+| `resources` | Object | The API entity (e.g., `users`, `tickets`). |
+| `permissions` | Action | The CRUD operation (e.g., `create`, `list_own`). |
+| `role_resource_permissions` | Junction | The mapping of Subject + Object + Action. |
+| `users` | Instance | Linking an individual identity to a `Role`. |
 
-*   **Users**: The actual people logging in.
-*   **Roles**: Labels like "Admin", "Manager", or "Support" that group users together.
-*   **Resources**: The parts of your application you want to protect (e.g., "users", "tickets", "products").
-*   **Permissions**: The specific actions allowed (e.g., "create", "read", "update", "delete", "list").
+## 🚦 Permission Matrix
+The system supports both global and ownership-scoped actions.
 
-## How to Manage Access (Step-by-Step)
+### Global Actions
+- `list`: View active records (status='active').
+- `list_all`: View all records regardless of status.
+- `create`: Validated record insertion.
+- `read`: Single instance retrieval.
+- `update`: Partial instance modification.
+- `delete`: Instance removal/soft-delete.
 
-### 1. Create a New Role
-If you need a new type of user (e.g., "Editor"), you simply add a row to the **`roles`** table.
-*   **Table**: `roles`
-*   **Action**: Insert a new record.
-*   **Example**: Name = "Editor"
+### Ownership Scoped Actions [Core Engine]
+These require a `createdBy` or `userId` column in the Drizzle schema.
 
-### 2. Define a Resource
-If you create a new feature (e.g., a "Blog"), you need to register it as a resource.
-*   **Table**: `resources`
-*   **Action**: Insert a new record.
-*   **Example**: Name = "blog_posts"
-
-### 3. Grant Permissions (The "Rule Book")
-This is the most important part. To say "Editors can update blog posts", you link the three concepts together in the **`role_resource_permissions`** table.
-*   **Table**: `role_resource_permissions`
-*   **Action**: Insert a record linking the IDs of:
-    1.  **Role**: (e.g., ID for "Editor")
-    2.  **Resource**: (e.g., ID for "blog_posts")
-    3.  **Permission**: (e.g., ID for "update")
-
-*You repeat this for every action you want to allow (e.g., one row for "read", another for "create").*
-
-### 4. Assign a Role to a User
-Finally, to give a user these powers, you just assign them the role.
-*   **Table**: `users`
-*   **Action**: Select the Role for a specific user.
-*   **Example**: Select "Editor" for user "john@example.com".
-
-## Summary of Tables
-
-| Table Name | Purpose |
+| Action | Logic Gate |
 | :--- | :--- |
-| **`roles`** | Define *who* exists (Admin, Guest, etc.). |
-| **`resources`** | Define *what* exists (Products, Orders, etc.). |
-| **`permissions`** | Define *actions* (Create, Read, Update, Delete). |
-| **`role_resource_permissions`** | **The Master Switch**. Connects Role + Resource + Action. |
-| **`users`** | Assigns a Role to a specific person via the `Role` field. |
+| `list_own` | `WHERE createdBy = current_user_id` |
+| `update_own` | `IF record.createdBy == user.id THEN ALLOW` |
+| `delete_own` | `IF record.createdBy == user.id THEN ALLOW` |
 
-## Owner-based Permissions
+## 🛠 Management Flow [Template Implementation]
 
-In addition to standard actions, you can assign **Ownership Permissions** for granular control:
-
-*   **`list`**: View a list of *active* records.
-*   **`list_all`**: View *all* records, including inactive ones (e.g., status='draft').
-*   **`list_own`**: View **only** records created by the user.
-*   **`update_own`**: Update a record **only if** the user created it.
-*   **`delete_own`**: Delete a record **only if** the user created it.
-
-### Prerequisites
-For ownership permissions to work, the table must track who created the record. Ensure your schema includes a `createdBy` field:
-
-```typescript
-export const posts = sqliteTable('posts', {
-  // ...
-  createdBy: integer('created_by'),
-})
+### 1. Resource Declaration
+Register new Drizzle tables in the `resources` table to enable the permission tracking.
+```sql
+INSERT INTO resources (name) VALUES ('blog_posts');
 ```
 
-The system automatically checks if `createdBy` matches the logged-in user's ID.
+### 2. Granting Access
+Link the Role, Resource, and Permission IDs in `role_resource_permissions`.
+```sql
+-- Role ID: 2 (Editor), Resource ID: 5 (Blog), Permission ID: 3 (Update)
+INSERT INTO role_resource_permissions (role_id, resource_id, permission_id) VALUES (2, 5, 3);
+```
 
-## Public Access
-
-Public (unauthenticated) access is controlled by the `public` role in the database. Assign permissions to the `public` role to allow access to resources for non-logged-in users.
+## 🌍 Public Access [Core Engine]
+Guest (unauthenticated) access is managed via the reserved `public` role. 
+- **Requirement**: `autoCrud.auth.authentication` must be `true`.
+- **Logic**: Any resource/action granted to the `public` role is exposed at the API layer without session verification.
