--- a/content/1.docs/6.helpful-links.md
+++ b/content/1.docs/6.helpful-links.md
@@ -6,18 +6,25 @@ description: A collection of useful resources, repositories, and community links
 ## Resources
 
 - **Template**: [https://github.com/clifordpereira/nuxt-auto-crud_template](https://github.com/clifordpereira/nuxt-auto-crud_template)
-- **Repository**: [https://github.com/clifordpereira/nuxt-auto-crud](https://github.com/clifordpereira/nuxt-auto-crud)
+- **Core Module**: [https://github.com/clifordpereira/nuxt-auto-crud](https://github.com/clifordpereira/nuxt-auto-crud)
 - **npm**: [https://www.npmjs.com/package/nuxt-auto-crud](https://www.npmjs.com/package/nuxt-auto-crud)
 
 ## Community
 
 - **Github Discussions**: [https://github.com/clifordpereira/nuxt-auto-crud/discussions/1](https://github.com/clifordpereira/nuxt-auto-crud/discussions/1)
-- **Discuss**: [https://discord.gg/hGgyEaGu](https://discord.gg/hGgyEaGu)
+- **Discuss**: [https://discord.gg/FBkQQfRFJM](https://discord.gg/FBkQQfRFJM)
 - **Creator Website**: [https://www.clifland.in/](https://www.clifland.in/)
 
 ## Videos
 
-- **YouTube**: [https://youtu.be/M9-koXmhB9k](https://youtu.be/M9-koXmhB9k)
-- **YouTube2**: [https://youtu.be/7gW0KW1KtN0](https://youtu.be/7gW0KW1KtN0)
-- **YouTube3**: [https://www.youtube.com/watch?v=Yty3OCYbwOo](https://www.youtube.com/watch?v=Yty3OCYbwOo)
-- **YouTube4**: [https://www.youtube.com/watch?v=W0ju4grRC9M](https://www.youtube.com/watch?v=W0ju4grRC9M)
+- [Installation](https://www.youtube.com/watch?v=_o0cddJUU50&list=PLnbvxcojhIixqM1J08Tnm7vmMdx2wsy4B&index=1)
+
+- [Demo Data](https://www.youtube.com/watch?v=AXQKByqMOJc&list=PLnbvxcojhIixqM1J08Tnm7vmMdx2wsy4B&index=2)
+
+- [Custom Schemas](https://www.youtube.com/watch?v=33-HBFfGfA4&list=PLnbvxcojhIixqM1J08Tnm7vmMdx2wsy4B&index=3)
+
+- [Permissions](https://www.youtube.com/watch?v=Ot3qMzWe4OU&list=PLnbvxcojhIixqM1J08Tnm7vmMdx2wsy4B&index=4)
+
+- [Deployment](https://www.youtube.com/watch?v=bbuKgfV-I44&list=PLnbvxcojhIixqM1J08Tnm7vmMdx2wsy4B&index=5)
+
+- [Environment Variables](https://www.youtube.com/watch?v=bh5EkArlb-E&list=PLnbvxcojhIixqM1J08Tnm7vmMdx2wsy4B&index=6)
