--- a/content/1.docs/3.configuration/1.module-options.md
+++ b/content/1.docs/3.configuration/1.module-options.md
@@ -1,6 +1,7 @@
 ---
-title: Module Options
-description: Configuration options for Nuxt Auto CRUD.
+title: Module Configuration
+description: Detailed reference for nuxt-auto-crud module options, including schema pathing and authentication integration.
+summary: Reference guide for configuring the nuxt-auto-crud module within nuxt.config.ts. Includes details on schema introspection paths, authentication overrides, and default settings.
 ---
 
 ## Configuration Example
