refactor: clarify and streamline the `.ai-context.md` document, detailing the architectural model and operational protocols for agents.

--- a/.ai-context.md
+++ b/.ai-context.md
@@ -2,55 +2,40 @@
 
 ## 🎯 System Architecture
 
-You are operating within a **Clifland Architectural Model** deployment.
+This repository is the **Abstract Class**—a standardized implementation blueprint.
 
-* **Library (Interface/Core):** `nuxt-auto-crud` (Source: `../src/`). Dynamic logic layer.
-* **Template (Abstract Class):** This `playground/` directory; provides the Nuxt 4 structure, UI layer, and implementation blueprint.
-* **Instance (Concrete Class):** The specific business logic (e.g., Job/Financial Management) derived from this template.
+* **Interface (The Core):** [nuxt-auto-crud](https://github.com/clifordpereira/nuxt-auto-crud). The headless engine (dependency). Manages runtime reflection, Drizzle-Zod integration, and dynamic Nitro endpoints.
+* **Abstract Class (The Template):** This repository. Defines Nuxt 4 `app/` structure, UI (Nuxt UI 4), and configuration patterns. Business-logic agnostic.
+* **Concrete Class (The App):** Derivative projects (e.g., JMS, FMS) that consume this template and define domain-specific Drizzle schemas.
+* **Instance (The Object):** Final deployment; a Concrete Class + client-specific DB/config.
+
+
 
 ## 📡 Dynamic API Discovery (Runtime Reflection)
 
-**CRITICAL:** This project does NOT use static API route files for CRUD.
+**CRITICAL:** Do NOT search for static CRUD API route files.
 
-* **Discovery Mechanism:** The NAC Core introspects all exported tables from `server/db/schema/*.ts`.
-* **Live Metadata:** Access `GET /api/_meta` to see the current architecture version, available resources, and their field definitions.
-* **Endpoint Pattern:** `/api/[plural_table_name]` (e.g., `/api/roles`, `/api/users`).
-* **Validation:** Automatic via `drizzle-zod` reflection.
-* **Action:** To understand an API, you MUST read the corresponding schema file in `server/db/schema/` or query the `_meta` endpoint.
+* **Discovery Mechanism:** NAC Core introspects exported tables from `server/db/schema/*.ts`.
+* **Live Metadata:** Use `GET /api/_meta` for versioning, resource availability, and field definitions.
+* **Endpoint Pattern:** `/api/[plural_table_name]` (e.g., `/api/users`).
+* **Validation:** Automatic via `drizzle-zod`.
+* **Agent Workflow:** You MUST read schema files in `server/db/schema/` or query `_meta` before proposing operations.
 
-The `_meta` response is the **Discovery Tool** for agents. It provides high-fidelity signals for tool calling:
-
-* **`labelField`**: Human-readable identifier (e.g., `name`).
-* **`isRelation`**: Boolean flag for foreign key relationships.
-* **`references`**: Target resource (e.g., `roleId` -> `roles`).
-
-**Workflow Requirement:** Agents MUST query `_meta` before proposing schema-dependent operations.
+### High-Fidelity Metadata Signals
+* **`labelField`**: Identifies the primary human-readable field (e.g., `name`, `title`).
+* **`isRelation`**: Boolean flag for FK relationships.
+* **`references`**: Maps the target resource (e.g., `roleId` -> `roles`).
 
 ## 🛡️ Operational Protocols
 
-* **System Fields:** `id`, `createdAt`, `updatedAt`, `deletedAt` are protected. Never attempt to `POST` or `PATCH` these directly unless performing a migration.
-* **Soft Deletes:** Standard on all NAC tables; the system filters out `deletedAt` records automatically at the Nitro layer.
-* **Auth/RBAC:** Permissions are mapped in `app.config.ts`. UI components (`<Can>`) and Server Middleware enforce these via the `roleResourcePermissions` table.
+* **Protected Fields:** `id`, `createdAt`, `updatedAt`, `deletedAt` are system-managed. Do not include in `POST`/`PATCH` payloads.
+* **Soft Deletes:** Enabled globally. NAC filters `deletedAt IS NOT NULL` at the Nitro layer.
+* **Auth/RBAC:** Enforced via `roleResourcePermissions`. UI visibility uses `<Can>` components.
+* **DRY Logic:** Logic belongs in the Core (Interface). UI/Blueprint belongs here (Abstract Class).
 
-## 📂 Key Directories for Agents
+## 📂 Key Directories
 
-* `server/db/schema/`: The Single Source of Truth for the API and Data Model.
-* `server/utils/schema.ts`: Contains the reflection logic that generates the `_meta` output.
-* `app.config.ts`: Configuration for roles, global UI hides, and seed data.
-* `nuxt.config.ts`: Defines the module source (Local vs. NPM).
-
----
-
-### 🏛️ Why this is "Pakka"
-
-By including the `_meta` details:
-
-1. **Zero Hallucination:** The agent knows exactly where to look for the "truth" (the schema files) and how the API maps those files to endpoints.
-2. **Efficient Navigation:** It understands that `roleResourcePermissions` is a junction table because the metadata flags multiple `isRelation: true` fields.
-3. **Deployment Awareness:** It recognizes the **Clifland Model**, allowing it to suggest updates in the correct repo (Core vs. Template).
-
-### 🤖 Final Check before Sync
-
-* [ ] **Core published?** (NPM or local link updated)
-* [ ] **`_meta` logic verified?** (As per the JSON you provided)
-* [ ] **`ai-context.md` committed?** **Next Step:** Since we've finalized the core logic and the AI context, would you like me to generate a **deployment checklist** specifically for your Cloudflare/Nuxt Hub transition to ensure the Worker size stays optimized?
+* `server/db/schema/`: **Single Source of Truth** for Data Model & API.
+* `server/utils/schema.ts`: Reflection logic for `_meta` generation.
+* `app.config.ts`: Global UI configuration, roles, and seed data.
+* `nuxt.config.ts`: Module source and NAC granular field visibility.
