feat: Add comprehensive deployment and agentic workflow documentation, update blog content, and refine project configurations for v1.26.0.

--- a/content/1.docs/1.auto-crud/0.index.md
+++ b/content/1.docs/1.auto-crud/0.index.md
@@ -1,12 +1,8 @@
 ---
-title: Installation
+title: Template Installation
 description: A production-ready Nuxt 4 SaaS template for zero-codegen CRUD operations.
 summary: Comprehensive guide for initializing a Nuxt 4 project using the nuxt-auto-crud engine. Key concepts include Zero-Codegen architecture, Drizzle schema introspection, and automated RBAC hydration.
 ---
-
-# Nuxt Auto CRUD Template
-
-This template is a production-ready SaaS base built on the **nuxt-auto-crud** engine. It allows you to transform database schemas into a fully functional application with zero boilerplate.
 
 ## Why use Nuxt Auto CRUD?
 
@@ -19,7 +15,8 @@ The engine is built on **Single Source of Truth (SSOT)** and **Zero-Codegen** pr
 
 ---
 
-## 🚀 Quick Start
+## 🚀 Quick Start 
+> Video Tutorial: [Install Nuxt Auto CRUD Template](https://www.youtube.com/watch?v=_o0cddJUU50&list=PLnbvxcojhIixqM1J08Tnm7vmMdx2wsy4B&index=1)
 
 ### 1. Initialize & Start
 ```bash
@@ -28,7 +25,7 @@ bun db:generate
 bun dev
 ```
 
-### 2. Smart Seeding
+### 2. Seeding
 Seeding triggers automatically via `server/tasks/seed.ts` when the **Admin** (`NUXT_ADMIN_EMAIL`) logs in for the first time. This hydrates the system with initial roles and permissions.
 
 ---
