--- a/content/1.docs/1.auto-crud/3.create-schema.md
+++ b/content/1.docs/1.auto-crud/3.create-schema.md
@@ -5,6 +5,8 @@ description: Learn how to define and organize your database schemas.
 
 Instead of putting all your tables in a single file, it's best practice to organize them into separate files within a `server/db/schema/` directory.
 
+> [Video Tutorial: Add Drizzle Schema](https://www.youtube.com/watch?v=33-HBFfGfA4&list=PLnbvxcojhIixqM1J08Tnm7vmMdx2wsy4B&index=4)
+
 ## 1. Create the Schema Directory
 
 Create a directory at `server/db/schema/`.
