--- a/content/1.docs/3.configuration/5.backend-only.md
+++ b/content/1.docs/3.configuration/5.backend-only.md
@@ -3,6 +3,11 @@ title: Backend-only App
 description: Configure Nuxt Auto CRUD for backend-only mode (API Mode).
 ---
 
+
+> [!IMPORTANT] 
+> **This mode is currently not our priority.** 
+> We are currently concentrating fully on the Full-stack Playground Template. Development on standalone backend-only may restart if there is significant interest from users of other frameworks (e.g., React.js).
+
 ## Overview
 
 If you are using Nuxt as a backend for a separate client application (e.g., mobile app, SPA), you can use this module to quickly expose REST APIs.
