--- a/content/1.docs/4.usage-examples/1.custom-features.md
+++ b/content/1.docs/4.usage-examples/1.custom-features.md
@@ -1,9 +1,14 @@
 ---
-title: Usage Examples
-description: Examples of how to consume the auto-generated APIs.
+title: Custom Features
+description: Examples of how to consume the reflected API endpoints for custom logic.
 ---
 
+
+> [!TIP]
+> While the engine handles standard CRUD automatically, these same API endpoints can be consumed directly within your application whenever you need to implement **custom logic or unique functionalities** that go beyond basic data management.
+
 ## Create a Record
+
 
 ```typescript
 const user = await $fetch("/api/users", {
