--- a/content/1.docs/4.usage-examples/4.database-management.md
+++ b/content/1.docs/4.usage-examples/4.database-management.md
@@ -15,9 +15,7 @@ If you are using NuxtHub (Cloudflare D1) or a local SQLite file:
     *   For local development, this usually means deleting the `.data` directory or your specific SQLite file.
 2.  **Regenerate the database**:
     ```bash
-    bun db:generate
-    # or
-    npx drizzle-kit generate
+    nuxt db generate
     ```
 
 ## Seeding Data
