--- a/content/3.blog/2.mastering-rbac.md
+++ b/content/3.blog/2.mastering-rbac.md
@@ -2,7 +2,7 @@
 title: Mastering Role-Based Access Control in Nuxt
 description: Learn how to secure your application with granular permissions using Nuxt Auto CRUD's built-in RBAC system.
 image:
-  src: https://images.unsplash.com/photo-1510511459019-5dda7724fd82?q=80&w=2070&auto=format&fit=crop
+  src: /images/blog/2.mastering-rbac.png
 authors:
   - name: Cliford Pereira
     to: https://github.com/clifordpereira
