--- a/content/1.docs/5.for-ai-agents/1.protocol.md
+++ b/content/1.docs/5.for-ai-agents/1.protocol.md
@@ -9,7 +9,9 @@ summary: This document outlines the API protocol for interacting with the auto-g
 The `nuxt-auto-crud` engine exposes a deterministic REST API protocol. Agents and client applications should interact with these endpoints using the following standards.
 
 ## 📡 Orchestration Strategy
-The core module supports server-side orchestration and schema-driven responses. AI agents should prioritize specific, targeted queries over bulk data fetching to minimize token overhead and latency.
+The core module supports server-side orchestration and schema-driven responses. AI agents should prioritize specific, targeted queries over bulk data fetching to minimize token overhead and latency. 
+
+For autonomous agents, we recommend using our [MCP Servers](/docs/for-ai-agents/mcp-servers) for automated discovery and execution.
 
 ## 📊 Current Implementation Status
 | Feature | Strategy | Notes |
