--- a/content/3.blog/4.nuxt-runtime-config.md
+++ b/content/3.blog/4.nuxt-runtime-config.md
@@ -2,7 +2,7 @@
 title: 'Nuxt Runtime Config & Environment Variables'
 description: 'Learn how to manage configuration in Nuxt 3 using runtimeConfig and automatic environment variable mapping.'
 image:
-  src: 'https://images.unsplash.com/photo-1629904853716-f004320d87be?q=80&w=2070&auto=format&fit=crop'
+  src: '/images/blog/4.nuxt-runtime-config.png'
   alt: 'Configuration settings concept'
 authors:
   - name: 'Cliford Pereira'
