feat: Real time updates with SSE

--- a/content/1.docs/1.auto-crud/2.features.md
+++ b/content/1.docs/1.auto-crud/2.features.md
@@ -26,6 +26,11 @@ Leverage **Nitro Dynamic Routing** and **Runtime Reflection** to resolve RESTful
 - **Dynamic Data Tables**: High-performance grids featuring **Search**, **Pagination**, and **Multi-format Export** (Excel/PDF).
 - **Inferred Forms**: UI inputs are derived from Drizzle schema types, ensuring zero-drift between the database and the frontend.
 
+## ⚡ Real-time Updates (SSE)
+- **Zero-Config Broadcasting**: All CRUD operations (`create`, `update`, `delete`) automatically broadcast events to connected clients.
+- **Instant Synchronization**: The `useAutoCrudSSE` composable ensures UI state remains strictly consistent with the server database, including computed fields like `updatedAt`.
+- **Atomic Reliability**: Updates are broadcast only *after* successful database commitment, ensuring the frontend never displays a false positive.
+
 ---
 
 ## 🛡️ Data Integrity & System Security
