--- a/content/1.docs/3.configuration/3.resource-configuration.md
+++ b/content/1.docs/3.configuration/3.resource-configuration.md
@@ -16,6 +16,7 @@ The system categorizes field visibility into three distinct logical tiers.
 
 ## 🛠 Serialization Filtering [Core Engine]
 Configure public field whitelists in `nuxt.config.ts` to prevent data leakage to guests.
+For Guest access to work, ensure the `public` role has `list` permissions for the specific resource in the Admin Dashboard.
 
 ```typescript
 // nuxt.config.ts [Core Engine]
