--- a/content/1.docs/5.for-ai-agents/1.protocol.md
+++ b/content/1.docs/5.for-ai-agents/1.protocol.md
@@ -1,7 +1,7 @@
 ---
 title: API Communication Protocol
 description: Specification for client-server interaction within the nuxt-auto-crud module.
-summary: This document outlines the API protocol for interacting with the auto-generated CRUD endpoints. External agents should follow the recommended querying patterns to ensure performance and compatibility.
+summary: This document outlines the API protocol for interacting with the dynamic CRUD endpoints. External agents should follow the recommended querying patterns to ensure performance and compatibility.
 ---
 
 # API Communication Protocol
