--- a/content/1.docs/5.for-ai-agents/2.mapping.md
+++ b/content/1.docs/5.for-ai-agents/2.mapping.md
@@ -21,5 +21,5 @@ This guide defines how Drizzle/Zod types manifest as Nuxt UI components via `use
 
 ## 🛡️ Operational Guardrails
 - **System Fields:** `id`, `createdAt`, `updatedAt`, `deletedAt` (and snake_case variants) are stripped by `Form.vue` and the Nitro backend.
-- **Labeling:** Labels are generated via `capitalCase(fieldName.replace(/(_id|Id)$/, ''))`.
+- **Labeling:** Labels are derived via `capitalCase(fieldName.replace(/(_id|Id)$/, ''))`.
 - **Passwords:** Only accepted on `POST`. Stripped from `PATCH` payloads automatically.
