--- a/content/1.docs/6.agentic-mcp.md
+++ b/content/1.docs/6.agentic-mcp.md
@@ -40,7 +40,7 @@ To get started, simply copy and paste the `mcp_config.json` provided below into 
 Provides deep, real-time knowledge of the Nuxt 4 ecosystem.
 - **Role**: Direct access to Nuxt documentation, modules, and architectural patterns.
 - **Workflow**: Agents use this to verify auto-imports, Nitro routes, and `app/` directory conventions.
-- **Benefit**: Guarantees that generated code is performant and follows modern Nuxt standards.
+- **Benefit**: Guarantees that your code is performant and follows modern Nuxt standards.
 
 ### 2. nuxt-ui (Design Logic)
 Essential for maintaining the premium aesthetics of the template.
