--- a/content/3.blog/1.introducing-nuxt-auto-crud.md
+++ b/content/3.blog/1.introducing-nuxt-auto-crud.md
@@ -19,12 +19,12 @@ It's exhausted just thinking about it.
 
 ## Enter Nuxt Auto CRUD
 
-**Nuxt Auto CRUD** is a module designed to eliminate this boilerplate. It takes your [Drizzle ORM](https://orm.drizzle.team/) schema and automatically generates fully-featured RESTful APIs.
+**Nuxt Auto CRUD** is a module designed to eliminate this boilerplate. It takes your [Drizzle ORM](https://orm.drizzle.team/) schema and automatically mounts fully-featured RESTful APIs.
 
 ### Key Features
 
 - **Schema Driven**: Your database schema is the single source of truth.
-- **Automatic APIs**: GET, POST, PATCH, DELETE endpoints are created instantly.
+- **Automatic APIs**: GET, POST, PATCH, DELETE endpoints are exposed instantly.
 - **Role-Based Access Control (RBAC)**: Granular permissions for every resource and action.
 - **Type Safety**: Full TypeScript support from database to API response.
 - **Zero Config**: Sensible defaults let you get started in minutes.
